feat: Include attachments into PDF
Fixes #497
